// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot mfaCredentials default 1`] = `
<div
  className="sc-Axmtr jBZtfl"
>
  <div>
    <div>
      <div
        className="sc-AxirZ sc-AxiKw fAiBCP"
      >
        mfa.email.explain
      </div>
      <form
        className="sc-fzozJi ffOmCE"
        noValidate={true}
        onSubmit={[Function]}
      >
        <button
          className="sc-AxmLO ktRTLW"
          data-testid="submit"
          disabled={false}
          type="submit"
        >
          mfa.register.email
        </button>
      </form>
    </div>
    <div
      className="sc-AxhUy ihriO"
    >
      <span />
    </div>
    <div>
      <div
        className="sc-AxirZ sc-AxiKw fAiBCP"
      >
        <div
          className="sc-AxirZ sc-AxiKw fAiBCP"
        >
          mfa.phoneNumber.explain
        </div>
      </div>
      <form
        className="sc-fzozJi ffOmCE"
        noValidate={true}
        onSubmit={[Function]}
      >
        <div
          className="sc-fzplWN bsaalQ"
        >
          <label
            className="sc-fzpans kcjhCB"
            htmlFor="phone_number"
          >
            phoneNumber
          </label>
          <input
            className="sc-fznyAO eZfilo"
            data-testid="phone_number"
            id="phone_number"
            name="phone_number"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder="phoneNumber"
            required={true}
            title="phoneNumber"
            type="tel"
            value=""
          />
        </div>
        <button
          className="sc-AxmLO ktRTLW"
          data-testid="submit"
          disabled={false}
          type="submit"
        >
          mfa.register.phoneNumber
        </button>
      </form>
    </div>
  </div>
</div>
`;

exports[`Snapshot mfaCredentials no intro 1`] = `
<div
  className="sc-Axmtr jBZtfl"
>
  <div>
    <div>
      <form
        className="sc-fzozJi ffOmCE"
        noValidate={true}
        onSubmit={[Function]}
      >
        <button
          className="sc-AxmLO ktRTLW"
          data-testid="submit"
          disabled={false}
          type="submit"
        >
          mfa.register.email
        </button>
      </form>
    </div>
    <div
      className="sc-AxhUy ihriO"
    >
      <span />
    </div>
    <div>
      <div
        className="sc-AxirZ sc-AxiKw fAiBCP"
      />
      <form
        className="sc-fzozJi ffOmCE"
        noValidate={true}
        onSubmit={[Function]}
      >
        <div
          className="sc-fzplWN bsaalQ"
        >
          <label
            className="sc-fzpans kcjhCB"
            htmlFor="phone_number"
          >
            phoneNumber
          </label>
          <input
            className="sc-fznyAO eZfilo"
            data-testid="phone_number"
            id="phone_number"
            name="phone_number"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder="phoneNumber"
            required={true}
            title="phoneNumber"
            type="tel"
            value=""
          />
        </div>
        <button
          className="sc-AxmLO ktRTLW"
          data-testid="submit"
          disabled={false}
          type="submit"
        >
          mfa.register.phoneNumber
        </button>
      </form>
    </div>
  </div>
</div>
`;
